[project]
name = "bug-triage"
version = "1.0"
description = "RL environment for automated GitHub bug report triage"
authors = [
    { name = "Team Dhurandhar" }
]
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "openenv-core>=0.1.0",
    "openai>=1.0",
    "requests>=2.31",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]

[project.scripts]
server = "openenv.core.server.cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.openenv]
config = "openenv.yaml"
server_app = "server.app:app"
